# neurastore

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  HISTORY.md  LICENSE  OLD_README.md  PORTFOLIO.md  README.md  SECURITY.md  docker-compose.tls.yml  docker-compose.yml
.github/workflows/: ci.yml
bench/: README.md  docker-compose.yml  requirements.txt
bench/scripts/: bench_common.py  bench_milvus.py  bench_neurastore_http.py  bench_pgvector.py  clean_insert_benchmark.sh  prepare_dataset.py
client/python/: README.md  pyproject.toml
client/python/data/: 000003.sst
client/python/neurastore_client/: __init__.py  cli.py  client.py  exceptions.py  models.py
client/python/tests/: test_cli.py  test_client.py  test_integration.py
deploy/: Caddyfile
src/: engine.rs  hnsw.rs  lib.rs  main.rs  memtable.rs  record.rs  sstable.rs  vector_index.rs  wal.rs
