[package]
name = "neurastore"
version = "0.1.0"
edition = "2021"
description = "NeuraStore: a unified storage/query engine for AI-native workloads"

[[bin]]
name = "neurastore"
path = "src/main.rs"

[lib]
name = "neurastore"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util", "sync"] }
serde = { version = "1", features = ["derive"] }
bincode = "1"
crc32fast = "1"
thiserror = "1"
rand = "0.8"
rayon = "=1.8.1"
rayon-core = "=1.12.1"

[dev-dependencies]
tempfile = "=3.10.1"

[profile.release]
# The hot paths here (squared_l2 distance computation, graph traversal)
# are exactly what LTO + single-codegen-unit help most: better inlining
# and vectorization opportunities across module boundaries, at the cost
# of longer compile times. Worth it for a database engine's core loop.
lto = true
codegen-units = 1
